# ttcr

./: .gitignore  CMakeLists.txt  install_ttcr.sh
ttcr/: CMakeLists.txt
ttcrpy/: Grid2Dttcr.cpp  setup.py
